package com.prog2.main.Process;

/**
 * This interface is used to calculate the salary of the objects that implement
 * 
 * @author Jiucehng Zang
 * @version 1.0
 * @since 2023-03-25
 * 
 */

public interface ComputePayRoll {

    /**
     * This method is used to calculate the salary of the objects that implement
     * 
     * @return double
     */

    double calculateSalary();
}
