package com.prog2.main.Process;

/**
 * This interface is used to generate a random id for the objects that implement
 * 
 * @author Jiucehng Zang
 * @version 1.0
 * @since 2023-03-25
 * 
 */

public interface IdString {
    public String prngId();
}
